deploy: cfc6f58ef53ebaa4bc9c3c9680126c5f70ad6e57

--- a/coding/tooling.html
+++ b/coding/tooling.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>เครื่องมือ - MC Datapacks TH</title>
+        <title>Tooling - MC Datapacks TH</title>
         
         
 
@@ -93,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">เทคนิคดาต้าแพ็ค โดย EstEarth</a></li><li class="chapter-item expanded "><a href="../coding/tooling.html" class="active"><strong aria-hidden="true">1.</strong> เครื่องมือ</a></li><li class="chapter-item expanded "><a href="../basic/index.html"><strong aria-hidden="true">2.</strong> เขียนดาต้าแพ็คพื้นฐาน</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="../basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="../basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="../basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="../basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="../basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="../basic_more/index.html"><strong aria-hidden="true">3.</strong> เขียนดาต้าแพ็คพื้นฐาน เพิ่มเติม</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="../basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="../rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack พื้นฐาน</a></li><li class="chapter-item expanded "><a href="../tip_trick/index.html"><strong aria-hidden="true">5.</strong> เคล็ดลับ/ลูกเล่น</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tip_trick/pack_mcmeta.html"><strong aria-hidden="true">5.1.</strong> เคล็ดลับไฟล์ pack.mcmeta</a></li></ol></li><li class="chapter-item expanded "><a href="../technical/index.html"><strong aria-hidden="true">6.</strong> เทคนิคแนะนำ</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/namespace.html"><strong aria-hidden="true">6.1.</strong> เนมสเปซ</a></li><li class="chapter-item expanded "><a href="../technical/structure.html"><strong aria-hidden="true">6.2.</strong> โครงสร้าง</a></li><li class="chapter-item expanded "><a href="../technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> ประสิทธิภาพ</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> selector</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Datapacking Technical by EstEarth</a></li><li class="chapter-item expanded "><a href="../coding/tooling.html" class="active"><strong aria-hidden="true">1.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="../basic/index.html"><strong aria-hidden="true">2.</strong> Datapacking Basic</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="../basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="../basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="../basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="../basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="../basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="../basic_more/index.html"><strong aria-hidden="true">3.</strong> Datapacking Basic +</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="../basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="../rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack Basic</a></li><li class="chapter-item expanded "><a href="../tip_trick/index.html"><strong aria-hidden="true">5.</strong> Tips/Tricks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tip_trick/pack_mcmeta.html"><strong aria-hidden="true">5.1.</strong> pack.mcmeta trick</a></li></ol></li><li class="chapter-item expanded "><a href="../technical/index.html"><strong aria-hidden="true">6.</strong> Tecnical advice</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/namespace.html"><strong aria-hidden="true">6.1.</strong> ์Namespace</a></li><li class="chapter-item expanded "><a href="../technical/structure.html"><strong aria-hidden="true">6.2.</strong> Structure</a></li><li class="chapter-item expanded "><a href="../technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> Optimization</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> @ selector</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -159,41 +159,42 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#เครืองมือ" id="เครืองมือ">เครื่องมือ</a></h1>
-<p>นี่เป็นเครื่องมือที่ผมแนะนำมันทำให้สะดวกสบายในการเขียนดาต้าแพ็ค</p>
-<h2><a class="header" href="#โปรแกรม" id="โปรแกรม">โปรแกรม</a></h2>
-<p>1.ลง <a href="https://code.visualstudio.com/">VS Code</a> หรือ <a href="https://code.visualstudio.com/insiders/">VS Code Insider</a> หรือ <a href="https://vscodium.com/">VS Codium</a> *ผมใช้ Insider</p>
-<p>2.ติดตั้งส่วนขยาย</p>
+                        <h1><a class="header" href="#tooling" id="tooling">Tooling</a></h1>
+<p>This tooling is recommended by me for its datapacking convenience.</p>
+<h2><a class="header" href="#programing" id="programing">Programing</a></h2>
+<p>1.Install <a href="https://code.visualstudio.com/">VS Code</a> or <a href="https://code.visualstudio.com/insiders/">VS Code Insider</a> or <a href="https://vscodium.com/">VS Codium</a> * I use Insider</p>
+<p>2.Extensions</p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=SPGoding.datapack-language-server">Data-pack Helper Plus</a> สำหรับช่วยเขียนดาต้าแพ็ค</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=SPGoding.datapack-language-server">Data-pack Helper Plus</a> various helper functionality to navigate through datapack.</li>
 </ul>
-<p>ตัวอย่างคร่าวๆ</p>
+<p>Rough preview</p>
 <p><img src="https://raw.githubusercontent.com/SPGoding/vscode-datapack-helper-plus/master/img/simple-completions.gif" alt="alt" /></p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=arcensoth.language-mcfunction">language-mcfunction</a> สำหรับไฮไลท์สีโค๊ดดาต้าแพ็คเพิ่มเติม</li>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=actuallyboomber.tellraw-preview">tellraw preview</a> เอาไว้ดูตัวอย่างข้อความที่ส่งไปยังผู้เล่น</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=arcensoth.language-mcfunction">language-mcfunction</a> This extension provides a syntax highlighting more color feedback.</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=actuallyboomber.tellraw-preview">tellraw preview</a> This extension provides text preview for commands that display a message to the player.</li>
 </ul>
 <p><img src="https://i.imgur.com/9Q64XoT.png" alt="alt" /></p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=ExodiusStudios.comment-anchors">Comment Anchors</a> เอาไว้ไฮไลท์คอมเม้นท์และมาร์กสีฟังก์ชั้น <code>#</code> ของ <code>Data-pack Helper Plus</code></li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=ExodiusStudios.comment-anchors">Comment Anchors</a> Highlight comment and color mark <code>#</code> function of the <code>Data-pack Helper Plus</code>.</li>
 </ul>
 <p><img src="./program/comment.png" alt="" /></p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme">Material Icon Theme</a> เปลี่ยนไอคอนไฟล์สวยๆ อันนี้แล้วแต่ความชอบ</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme">Material Icon Theme</a> Change icon for pretty files. This (depends on your preference.)</li>
 </ul>
-<h2><a class="header" href="#ตังคา" id="ตังคา">ตั้งค่า</a></h2>
-<p>ถ้าคุณเขียนดาต้าแพ็คแล้วอยากให้โค๊ดมีลักษณะสวยๆแบบนี้ หรือ ปรับแต่งได้ตามใจชอบ สามารถตั้งค่าได้ดังนี้</p>
+<h2><a class="header" href="#setting" id="setting">Setting</a></h2>
+<p>If you datapacking and want the code to look like this or customize it as you like. Can be set as follows.</p>
 <p><img src="./program/window.png" alt="" /></p>
-<p>1.หลังจากโหลด Font และติดตั้งแล้ว ก็ตั้งค่า Font โดยไปที่ <code>Setting -&gt; Text Editor -&gt; Font -&gt; Font Family ใส่ Fira Code</code></p>
+<p>1.<strong>Font</strong></p>
 <ul>
-<li>Font <a href="https://github.com/tonsky/FiraCode">Fira Code</a> (แล้วแต่ความชอบด้วย ที่ผมใช้ Font นี้ส่วนนึงเพราะการเปลี่ยนรูปเครื่องหมาย <code>&lt;=</code> <code>-&gt;</code> ดั่งในภาพ และ <code>@</code> มันเท่ห์ดี)</li>
-<li>Font Ligatures (เปลี่ยนรูปเครื่องหมาย <code>&lt;=</code> <code>-&gt;</code>) -&gt; <code>Edit in settings.json</code> -&gt; <code>&quot;editor.fontLigatures&quot;: true</code></li>
+<li>Font <a href="https://github.com/tonsky/FiraCode">Fira Code</a> (Depending on your preference, I use this font, partly because of font ligatures <code>&lt;= -&gt;</code> as in the picture and <code>@</code> is cool.)</li>
+<li>After font download and installed, set font by going to <code>Setting -&gt; Text Editor -&gt; Font -&gt; Font Family ใส่ Fira Code</code></li>
+<li>Font Ligatures (change symbol <code>&lt;=</code> <code>-&gt;</code>) -&gt; <code>Edit in settings.json</code> -&gt; <code>&quot;editor.fontLigatures&quot;: true</code></li>
 </ul>
-<p>2.ไฮไลท์สี </p>
+<p>2.<strong>Syntax Highlighting Color</strong></p>
 <ul>
-<li>จากข้อก่อนหน้าไม่ต้องปิดหน้าต่าง settings.json</li>
-<li>ให้คัดลอกนำไปใส่ได้เลย ( <code>,</code> จะต่อจาก <code>editor.fontLigatures&quot;: true</code>)</li>
-<li>อยากปรับแต่งเพิ่มเติม <a href="https://github.com/SPGoding/datapack-language-server/wiki/Semantic-Tokens">ดูที่นี่</a></li>
+<li>From the previous verse, do not close the window settings.json</li>
+<li>You can copy and insert it (Where <code>,</code> will continue from the back <code>Editor.fontLigatures &quot;: true</code>)</li>
+<li>Want to customize more <a href="https://github.com/SPGoding/datapack-language-server/wiki/Semantic-Tokens">here</a></li>
 </ul>
 <pre><code class="language-json">    ,
     &quot;editor.semanticTokenColorCustomizations&quot;: {
@@ -222,7 +223,7 @@
         &quot;statusBarItem.remoteBackground&quot;: &quot;#3ea8ff&quot;
     }
 </code></pre>
-<p>3.ไฮไลท์คอมเมนต์ (ใส่ หลังจาก <code>}</code> ในข้อ 2 ได้เลย )</p>
+<p>3.<strong>Highlighting Commment</strong> (You can add after <code>}</code> in verse 2)</p>
 <pre><code class="language-json">    ,
     &quot;commentAnchors.tags.list&quot;: [   
 
@@ -328,6 +329,8 @@
         &quot;&quot;
     ]
 </code></pre>
+<h2><a class="header" href="#note" id="note">Note</a></h2>
+<p>The reason for setting such as ANCHOR, TODO, SECTION to false is because it is the default of the extension that produces the same word highlight.</p>
 
                     </main>
 
