--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">เทคนิคดาต้าแพ็ค โดย EstEarth</a></li><li class="chapter-item expanded "><a href="coding/tooling.html"><strong aria-hidden="true">1.</strong> เครื่องมือ</a></li><li class="chapter-item expanded "><a href="basic/index.html"><strong aria-hidden="true">2.</strong> เขียนดาต้าแพ็คพื้นฐาน</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="basic_more/index.html"><strong aria-hidden="true">3.</strong> เขียนดาต้าแพ็คพื้นฐาน เพิ่มเติม</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack พื้นฐาน</a></li><li class="chapter-item expanded "><a href="tip_trick/index.html"><strong aria-hidden="true">5.</strong> เคล็ดลับ/ลูกเล่น</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tip_trick/pack_mcmeta.html"><strong aria-hidden="true">5.1.</strong> เคล็ดลับไฟล์ pack.mcmeta</a></li></ol></li><li class="chapter-item expanded "><a href="technical/index.html"><strong aria-hidden="true">6.</strong> เทคนิคแนะนำ</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/namespace.html"><strong aria-hidden="true">6.1.</strong> เนมสเปซ</a></li><li class="chapter-item expanded "><a href="technical/structure.html"><strong aria-hidden="true">6.2.</strong> โครงสร้าง</a></li><li class="chapter-item expanded "><a href="technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> ประสิทธิภาพ</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> selector</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Datapacking Technical by EstEarth</a></li><li class="chapter-item expanded "><a href="coding/tooling.html"><strong aria-hidden="true">1.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="basic/index.html"><strong aria-hidden="true">2.</strong> Datapacking Basic</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="basic_more/index.html"><strong aria-hidden="true">3.</strong> Datapacking Basic +</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack Basic</a></li><li class="chapter-item expanded "><a href="tip_trick/index.html"><strong aria-hidden="true">5.</strong> Tips/Tricks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tip_trick/pack_mcmeta.html"><strong aria-hidden="true">5.1.</strong> pack.mcmeta trick</a></li></ol></li><li class="chapter-item expanded "><a href="technical/index.html"><strong aria-hidden="true">6.</strong> Tecnical advice</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/namespace.html"><strong aria-hidden="true">6.1.</strong> ์Namespace</a></li><li class="chapter-item expanded "><a href="technical/structure.html"><strong aria-hidden="true">6.2.</strong> Structure</a></li><li class="chapter-item expanded "><a href="technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> Optimization</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> @ selector</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -161,46 +161,48 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#เกียวกับ" id="เกียวกับ">เกี่ยวกับ</a></h1>
-<p>หน้านี้สร้างขึ้นเพื่อ แนะนำ, สอน และ อธิบายเทคนิคดีๆ ในการเขียนดาต้าแพ็ค จากประสบการณ์ของผมที่ผ่านมาเพื่อให้การพัฒนากับการซ่อมบำรุงดีขึ้นและง่ายขึ้นในอนาคต
-ซึ่งทุกคนสามารถนำไปปรับและประยุกต์ใช้ได้ เป็นทางเลือกหนึ่งที่ไม่ได้บังคับใดๆ แต่มีจุดประสงค์เพื่อให้การปฎิบัติตาม <a href="https://mc-datapacks.github.io/th/">แบบแผนทางการ</a> นั้นง่ายขึ้น ได้รับการตรวจสอบที่ง่ายขึ้นจาก Datapack Reviewer จากปัญหาบางอย่างที่เกิดขึ้นจากประสบการณ์ที่ตรวจสอบดาต้าแพ็คมา</p>
-<p><a href="https://discord.gg/KgbVpmz">ดิสคอร์ดไทย</a></p>
-<p><a href="https://discord.gg/SnJQcfq">ดิสคอร์ดตปท.</a></p>
-<h1><a class="header" href="#เครืองมือ" id="เครืองมือ">เครื่องมือ</a></h1>
-<p>นี่เป็นเครื่องมือที่ผมแนะนำมันทำให้สะดวกสบายในการเขียนดาต้าแพ็ค</p>
-<h2><a class="header" href="#โปรแกรม" id="โปรแกรม">โปรแกรม</a></h2>
-<p>1.ลง <a href="https://code.visualstudio.com/">VS Code</a> หรือ <a href="https://code.visualstudio.com/insiders/">VS Code Insider</a> หรือ <a href="https://vscodium.com/">VS Codium</a> *ผมใช้ Insider</p>
-<p>2.ติดตั้งส่วนขยาย</p>
+                        <h1><a class="header" href="#about" id="about">About</a></h1>
+<p>This page is created to <em>introduce</em>, <em>teach</em> and <em>explain good techniques</em>. To datapacking from my past experience in order to make development and maintenance better and easier in the future. Which everyone can adapt and apply Is one option<br />
+and <strong>not force</strong> it in any way.</p>
+<p>And one more purpose of Tecnical advice to make it easier to follow <a href="https://mc-datapacks.github.io/th/">Official Conventions</a> make it easier to get reviews from Datapack Reviewer.This has been compiled from some of the common issues from our experiences with datapack reviews.</p>
+<p><a href="https://discord.gg/SnJQcfq">Minecraft Datapacks</a></p>
+<p><a href="https://discord.gg/KgbVpmz">Minecraft Datapacks TH</a></p>
+<h1><a class="header" href="#tooling" id="tooling">Tooling</a></h1>
+<p>This tooling is recommended by me for its datapacking convenience.</p>
+<h2><a class="header" href="#programing" id="programing">Programing</a></h2>
+<p>1.Install <a href="https://code.visualstudio.com/">VS Code</a> or <a href="https://code.visualstudio.com/insiders/">VS Code Insider</a> or <a href="https://vscodium.com/">VS Codium</a> * I use Insider</p>
+<p>2.Extensions</p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=SPGoding.datapack-language-server">Data-pack Helper Plus</a> สำหรับช่วยเขียนดาต้าแพ็ค</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=SPGoding.datapack-language-server">Data-pack Helper Plus</a> various helper functionality to navigate through datapack.</li>
 </ul>
-<p>ตัวอย่างคร่าวๆ</p>
+<p>Rough preview</p>
 <p><img src="https://raw.githubusercontent.com/SPGoding/vscode-datapack-helper-plus/master/img/simple-completions.gif" alt="alt" /></p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=arcensoth.language-mcfunction">language-mcfunction</a> สำหรับไฮไลท์สีโค๊ดดาต้าแพ็คเพิ่มเติม</li>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=actuallyboomber.tellraw-preview">tellraw preview</a> เอาไว้ดูตัวอย่างข้อความที่ส่งไปยังผู้เล่น</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=arcensoth.language-mcfunction">language-mcfunction</a> This extension provides a syntax highlighting more color feedback.</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=actuallyboomber.tellraw-preview">tellraw preview</a> This extension provides text preview for commands that display a message to the player.</li>
 </ul>
 <p><img src="https://i.imgur.com/9Q64XoT.png" alt="alt" /></p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=ExodiusStudios.comment-anchors">Comment Anchors</a> เอาไว้ไฮไลท์คอมเม้นท์และมาร์กสีฟังก์ชั้น <code>#</code> ของ <code>Data-pack Helper Plus</code></li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=ExodiusStudios.comment-anchors">Comment Anchors</a> Highlight comment and color mark <code>#</code> function of the <code>Data-pack Helper Plus</code>.</li>
 </ul>
 <p><img src="coding/./program/comment.png" alt="" /></p>
 <ul>
-<li><a href="https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme">Material Icon Theme</a> เปลี่ยนไอคอนไฟล์สวยๆ อันนี้แล้วแต่ความชอบ</li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme">Material Icon Theme</a> Change icon for pretty files. This (depends on your preference.)</li>
 </ul>
-<h2><a class="header" href="#ตังคา" id="ตังคา">ตั้งค่า</a></h2>
-<p>ถ้าคุณเขียนดาต้าแพ็คแล้วอยากให้โค๊ดมีลักษณะสวยๆแบบนี้ หรือ ปรับแต่งได้ตามใจชอบ สามารถตั้งค่าได้ดังนี้</p>
+<h2><a class="header" href="#setting" id="setting">Setting</a></h2>
+<p>If you datapacking and want the code to look like this or customize it as you like. Can be set as follows.</p>
 <p><img src="coding/./program/window.png" alt="" /></p>
-<p>1.หลังจากโหลด Font และติดตั้งแล้ว ก็ตั้งค่า Font โดยไปที่ <code>Setting -&gt; Text Editor -&gt; Font -&gt; Font Family ใส่ Fira Code</code></p>
+<p>1.<strong>Font</strong></p>
 <ul>
-<li>Font <a href="https://github.com/tonsky/FiraCode">Fira Code</a> (แล้วแต่ความชอบด้วย ที่ผมใช้ Font นี้ส่วนนึงเพราะการเปลี่ยนรูปเครื่องหมาย <code>&lt;=</code> <code>-&gt;</code> ดั่งในภาพ และ <code>@</code> มันเท่ห์ดี)</li>
-<li>Font Ligatures (เปลี่ยนรูปเครื่องหมาย <code>&lt;=</code> <code>-&gt;</code>) -&gt; <code>Edit in settings.json</code> -&gt; <code>&quot;editor.fontLigatures&quot;: true</code></li>
+<li>Font <a href="https://github.com/tonsky/FiraCode">Fira Code</a> (Depending on your preference, I use this font, partly because of font ligatures <code>&lt;= -&gt;</code> as in the picture and <code>@</code> is cool.)</li>
+<li>After font download and installed, set font by going to <code>Setting -&gt; Text Editor -&gt; Font -&gt; Font Family ใส่ Fira Code</code></li>
+<li>Font Ligatures (change symbol <code>&lt;=</code> <code>-&gt;</code>) -&gt; <code>Edit in settings.json</code> -&gt; <code>&quot;editor.fontLigatures&quot;: true</code></li>
 </ul>
-<p>2.ไฮไลท์สี </p>
+<p>2.<strong>Syntax Highlighting Color</strong></p>
 <ul>
-<li>จากข้อก่อนหน้าไม่ต้องปิดหน้าต่าง settings.json</li>
-<li>ให้คัดลอกนำไปใส่ได้เลย ( <code>,</code> จะต่อจาก <code>editor.fontLigatures&quot;: true</code>)</li>
-<li>อยากปรับแต่งเพิ่มเติม <a href="https://github.com/SPGoding/datapack-language-server/wiki/Semantic-Tokens">ดูที่นี่</a></li>
+<li>From the previous verse, do not close the window settings.json</li>
+<li>You can copy and insert it (Where <code>,</code> will continue from the back <code>Editor.fontLigatures &quot;: true</code>)</li>
+<li>Want to customize more <a href="https://github.com/SPGoding/datapack-language-server/wiki/Semantic-Tokens">here</a></li>
 </ul>
 <pre><code class="language-json">    ,
     &quot;editor.semanticTokenColorCustomizations&quot;: {
@@ -229,7 +231,7 @@
         &quot;statusBarItem.remoteBackground&quot;: &quot;#3ea8ff&quot;
     }
 </code></pre>
-<p>3.ไฮไลท์คอมเมนต์ (ใส่ หลังจาก <code>}</code> ในข้อ 2 ได้เลย )</p>
+<p>3.<strong>Highlighting Commment</strong> (You can add after <code>}</code> in verse 2)</p>
 <pre><code class="language-json">    ,
     &quot;commentAnchors.tags.list&quot;: [   
 
@@ -335,6 +337,8 @@
         &quot;&quot;
     ]
 </code></pre>
+<h2><a class="header" href="#note" id="note">Note</a></h2>
+<p>The reason for setting such as ANCHOR, TODO, SECTION to false is because it is the default of the extension that produces the same word highlight.</p>
 <h1><a class="header" href="#ดาตาแพคขันพืนฐาน" id="ดาตาแพคขันพืนฐาน">ดาต้าแพ็คขั้นพื้นฐาน</a></h1>
 <p>ส่วนนี้สำหรับสอนเขียนดาต้าแพ็ค เพื่อทำความรู้จักและเข้าใจในส่วนต่างๆ ในระดับเบื้องต้น</p>
 <h1><a class="header" href="#advancement" id="advancement">Advancement</a></h1>
@@ -355,15 +359,15 @@
 <p>เร็วนี้ๆ</p>
 <h1><a class="header" href="#resource-pack-พืนฐาน" id="resource-pack-พืนฐาน">Resource pack พื้นฐาน</a></h1>
 <p>เร็วๆนี้</p>
-<h1><a class="header" href="#เคลดลับ-และ-ลูกเลน" id="เคลดลับ-และ-ลูกเลน">เคล็ดลับ และ ลูกเล่น</a></h1>
-<p>บอกเคล็ดลับและลูกๆต่างๆจากประสบการณ์ที่รู้และได้ใช้งาน</p>
-<h1><a class="header" href="#เคลดลับไฟล-packmcmeta" id="เคลดลับไฟล-packmcmeta">เคล็ดลับไฟล์ pack.mcmeta</a></h1>
-<h1><a class="header" href="#เกียวกับ-1" id="เกียวกับ-1">เกี่ยวกับ</a></h1>
-<p>เป็นลูกเล่นที่คุณสามารถนำไปใช้ได้</p>
-<h1><a class="header" href="#ใชงานยังไง" id="ใชงานยังไง">ใช้งานยังไง</a></h1>
-<p>ไฟล์ <code>pack.mcmeta</code> รองรับ JSON Text Component ด้วย
-ซึ่งสามารถนำไปใช้กับ <code>advancement</code> ได้ด้วยนะ </p>
-<h2><a class="header" href="#แบบ-ที-1" id="แบบ-ที-1">แบบ ที่ 1</a></h2>
+<h1><a class="header" href="#tip-n-trick" id="tip-n-trick">Tip n Trick</a></h1>
+<p>Give me tips and tricks based on my experience and use.</p>
+<h1><a class="header" href="#packmcmeta-trick" id="packmcmeta-trick">pack.mcmeta trick</a></h1>
+<h1><a class="header" href="#about-1" id="about-1">about</a></h1>
+<p>It is a gimmick that you can use.</p>
+<h1><a class="header" href="#implementation" id="implementation">Implementation</a></h1>
+<p><code>pack.mcmeta</code> also support JSON Text Component. 
+Which can be applied to <code>Advancement</code> too.</p>
+<h2><a class="header" href="#type-1" id="type-1">Type 1</a></h2>
 <pre><code class="language-json">{
 	&quot;pack&quot;: {
 		&quot;pack_format&quot;: 6,
@@ -383,9 +387,9 @@
 }
 </code></pre>
 <p><img src="tip_trick/./pack/1.png" alt="" /></p>
-<p>ถ้าคุณใส่ <code>&quot;description&quot;: [&quot;&quot;,{</code> 2 บรรทัดล่างจะกลายเป็นสีค่าตั้งต้น</p>
+<p>If you add <code>description '': [&quot;&quot;, {</code> the bottom two lines will become the default color.</p>
 <p><img src="tip_trick/./pack/1_1.png" alt="" /></p>
-<h2><a class="header" href="#แบบ-ที-2" id="แบบ-ที-2">แบบ ที่ 2</a></h2>
+<h2><a class="header" href="#type-2" id="type-2">Type 2</a></h2>
 <pre><code class="language-json">{
     &quot;pack&quot;: {
         &quot;pack_format&quot;: 6,
@@ -408,9 +412,8 @@
 }
 </code></pre>
 <p><img src="tip_trick/./pack/2.png" alt="" /></p>
-<p>สำหรับเกมเวอร์ชั่น 1.16 ขึ้นไป
-คุณสามารถใช้ค่าสี <em>HEX</em> และ <em>Custom Font</em> ด้วย <em>Resource pack</em> ได้</p>
-<h2><a class="header" href="#ตัวอยางการใชงานสำหรับ-advancement" id="ตัวอยางการใชงานสำหรับ-advancement">ตัวอย่างการใช้งานสำหรับ Advancement</a></h2>
+<p>For game version 1.16+ You can use <em>HEX</em> color value and <em>Custom Font</em> with <em>Resource pack</em>.</p>
+<h2><a class="header" href="#example-of-use-for-advancement" id="example-of-use-for-advancement">Example of use for Advancement</a></h2>
 <pre><code class="language-json">{
 	&quot;display&quot;: {
 		&quot;title&quot;: {
@@ -458,12 +461,12 @@
 }
 </code></pre>
 <p><img src="tip_trick/./pack/3.png" alt="" /></p>
-<h2><a class="header" href="#หมายเหตุ" id="หมายเหตุ">หมายเหตุ</a></h2>
-<p><code>\n</code> มีหน้าที่ขึ้นบรรทัดใหม่ แนะนำให้ใส่ไว้ข้างหลังรูปแบบโค๊ดจะสวยกว่า ถ้าใส่ข้างหน้า <code>n</code> จะอยู่ติดกับอักษรอื่น</p>
+<h2><a class="header" href="#note-1" id="note-1">Note</a></h2>
+<p><code>\n</code> is for the new line. Recommend to put it behind the code pattern is more beautiful. If you put it in front of <code>n</code>, it will be attached to another text.</p>
 <h1><a class="header" href="#เทคนิคแนะนำ" id="เทคนิคแนะนำ">เทคนิคแนะนำ</a></h1>
 <p>ส่วนนี้เพื่อบอกเทคนิคที่แนะนำ สำหรับ คำขอรีวิวเพื่อ ผ่านการรับรอง และ ตราประทับคุณภาพ จาก <em>Datapack Reviewer EstEarth202</em></p>
 <h1><a class="header" href="#โครงสรางไฟลดาตาแพค" id="โครงสรางไฟลดาตาแพค">โครงสร้างไฟล์ดาต้าแพ็ค</a></h1>
-<h2><a class="header" href="#เกียวกับ-2" id="เกียวกับ-2">เกี่ยวกับ</a></h2>
+<h2><a class="header" href="#เกียวกับ" id="เกียวกับ">เกี่ยวกับ</a></h2>
 <p>สำหรับแสดงตัวอย่างหนึ่งในโครงสร้างไฟล์ดาต้าแพ็คที่สวยงาม เป็นระเบียบ จัดกลุ่มได้ง่าย ง่ายต่อการอ่าน พัฒนา และ ซ่อมบำรุง</p>
 <h2><a class="header" href="#ตัวอยางทีเปนไปไดในแตละกรณี" id="ตัวอยางทีเปนไปไดในแตละกรณี">ตัวอย่างที่เป็นไปได้ในแต่ละกรณี</a></h2>
 <h3><a class="header" href="#ดาตาแพคหลายชุด" id="ดาตาแพคหลายชุด">ดาต้าแพ็คหลายชุด</a></h3>
