--- a/tip_trick/pack_mcmeta.html
+++ b/tip_trick/pack_mcmeta.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>เคล็ดลับไฟล์ pack.mcmeta - MC Datapacks TH</title>
+        <title>pack.mcmeta trick - MC Datapacks TH</title>
         
         
 
@@ -93,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">เทคนิคดาต้าแพ็ค โดย EstEarth</a></li><li class="chapter-item expanded "><a href="../coding/tooling.html"><strong aria-hidden="true">1.</strong> เครื่องมือ</a></li><li class="chapter-item expanded "><a href="../basic/index.html"><strong aria-hidden="true">2.</strong> เขียนดาต้าแพ็คพื้นฐาน</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="../basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="../basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="../basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="../basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="../basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="../basic_more/index.html"><strong aria-hidden="true">3.</strong> เขียนดาต้าแพ็คพื้นฐาน เพิ่มเติม</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="../basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="../rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack พื้นฐาน</a></li><li class="chapter-item expanded "><a href="../tip_trick/index.html"><strong aria-hidden="true">5.</strong> เคล็ดลับ/ลูกเล่น</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tip_trick/pack_mcmeta.html" class="active"><strong aria-hidden="true">5.1.</strong> เคล็ดลับไฟล์ pack.mcmeta</a></li></ol></li><li class="chapter-item expanded "><a href="../technical/index.html"><strong aria-hidden="true">6.</strong> เทคนิคแนะนำ</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/namespace.html"><strong aria-hidden="true">6.1.</strong> เนมสเปซ</a></li><li class="chapter-item expanded "><a href="../technical/structure.html"><strong aria-hidden="true">6.2.</strong> โครงสร้าง</a></li><li class="chapter-item expanded "><a href="../technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> ประสิทธิภาพ</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> selector</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Datapacking Technical by EstEarth</a></li><li class="chapter-item expanded "><a href="../coding/tooling.html"><strong aria-hidden="true">1.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="../basic/index.html"><strong aria-hidden="true">2.</strong> Datapacking Basic</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="../basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="../basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="../basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="../basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="../basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="../basic_more/index.html"><strong aria-hidden="true">3.</strong> Datapacking Basic +</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="../basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="../basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="../rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack Basic</a></li><li class="chapter-item expanded "><a href="../tip_trick/index.html"><strong aria-hidden="true">5.</strong> Tips/Tricks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tip_trick/pack_mcmeta.html" class="active"><strong aria-hidden="true">5.1.</strong> pack.mcmeta trick</a></li></ol></li><li class="chapter-item expanded "><a href="../technical/index.html"><strong aria-hidden="true">6.</strong> Tecnical advice</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/namespace.html"><strong aria-hidden="true">6.1.</strong> ์Namespace</a></li><li class="chapter-item expanded "><a href="../technical/structure.html"><strong aria-hidden="true">6.2.</strong> Structure</a></li><li class="chapter-item expanded "><a href="../technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> Optimization</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> @ selector</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -159,13 +159,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#เคลดลับไฟล-packmcmeta" id="เคลดลับไฟล-packmcmeta">เคล็ดลับไฟล์ pack.mcmeta</a></h1>
-<h1><a class="header" href="#เกียวกับ" id="เกียวกับ">เกี่ยวกับ</a></h1>
-<p>เป็นลูกเล่นที่คุณสามารถนำไปใช้ได้</p>
-<h1><a class="header" href="#ใชงานยังไง" id="ใชงานยังไง">ใช้งานยังไง</a></h1>
-<p>ไฟล์ <code>pack.mcmeta</code> รองรับ JSON Text Component ด้วย
-ซึ่งสามารถนำไปใช้กับ <code>advancement</code> ได้ด้วยนะ </p>
-<h2><a class="header" href="#แบบ-ที-1" id="แบบ-ที-1">แบบ ที่ 1</a></h2>
+                        <h1><a class="header" href="#packmcmeta-trick" id="packmcmeta-trick">pack.mcmeta trick</a></h1>
+<h1><a class="header" href="#about" id="about">about</a></h1>
+<p>It is a gimmick that you can use.</p>
+<h1><a class="header" href="#implementation" id="implementation">Implementation</a></h1>
+<p><code>pack.mcmeta</code> also support JSON Text Component. 
+Which can be applied to <code>Advancement</code> too.</p>
+<h2><a class="header" href="#type-1" id="type-1">Type 1</a></h2>
 <pre><code class="language-json">{
 	&quot;pack&quot;: {
 		&quot;pack_format&quot;: 6,
@@ -185,9 +185,9 @@
 }
 </code></pre>
 <p><img src="./pack/1.png" alt="" /></p>
-<p>ถ้าคุณใส่ <code>&quot;description&quot;: [&quot;&quot;,{</code> 2 บรรทัดล่างจะกลายเป็นสีค่าตั้งต้น</p>
+<p>If you add <code>description '': [&quot;&quot;, {</code> the bottom two lines will become the default color.</p>
 <p><img src="./pack/1_1.png" alt="" /></p>
-<h2><a class="header" href="#แบบ-ที-2" id="แบบ-ที-2">แบบ ที่ 2</a></h2>
+<h2><a class="header" href="#type-2" id="type-2">Type 2</a></h2>
 <pre><code class="language-json">{
     &quot;pack&quot;: {
         &quot;pack_format&quot;: 6,
@@ -210,9 +210,8 @@
 }
 </code></pre>
 <p><img src="./pack/2.png" alt="" /></p>
-<p>สำหรับเกมเวอร์ชั่น 1.16 ขึ้นไป
-คุณสามารถใช้ค่าสี <em>HEX</em> และ <em>Custom Font</em> ด้วย <em>Resource pack</em> ได้</p>
-<h2><a class="header" href="#ตัวอยางการใชงานสำหรับ-advancement" id="ตัวอยางการใชงานสำหรับ-advancement">ตัวอย่างการใช้งานสำหรับ Advancement</a></h2>
+<p>For game version 1.16+ You can use <em>HEX</em> color value and <em>Custom Font</em> with <em>Resource pack</em>.</p>
+<h2><a class="header" href="#example-of-use-for-advancement" id="example-of-use-for-advancement">Example of use for Advancement</a></h2>
 <pre><code class="language-json">{
 	&quot;display&quot;: {
 		&quot;title&quot;: {
@@ -260,8 +259,8 @@
 }
 </code></pre>
 <p><img src="./pack/3.png" alt="" /></p>
-<h2><a class="header" href="#หมายเหตุ" id="หมายเหตุ">หมายเหตุ</a></h2>
-<p><code>\n</code> มีหน้าที่ขึ้นบรรทัดใหม่ แนะนำให้ใส่ไว้ข้างหลังรูปแบบโค๊ดจะสวยกว่า ถ้าใส่ข้างหน้า <code>n</code> จะอยู่ติดกับอักษรอื่น</p>
+<h2><a class="header" href="#note" id="note">Note</a></h2>
+<p><code>\n</code> is for the new line. Recommend to put it behind the code pattern is more beautiful. If you put it in front of <code>n</code>, it will be attached to another text.</p>
 
                     </main>
 
