deploy: fc7d00de0fc9d066bce1329b5a83f6c9fc6caafa

--- a/print.html
+++ b/print.html
@@ -162,7 +162,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#about" id="about">About</a></h1>
-<p>This page is created to <em>introduce</em>, <em>teach</em> and <em>explain good techniques</em>. To datapacking from my past experience in order to make development and maintenance better and easier in the future. Which everyone can adapt and apply Is one option<br />
+<p>This page is created to <em>introduce</em>, <em>teach</em> and <em>explain good techniques</em>. To datapacking from my past experience in order to make develop and maintain better and easier in the future. Which everyone can adapt and apply Is one option<br />
 and <strong>not force</strong> it in any way.</p>
 <p>And one more purpose of <a href="./technical/index.html">Tecnical advice</a> to make it easier to follow <a href="https://mc-datapacks.github.io/th/">Official Conventions</a> make it easier to get reviews from Datapack Reviewer. This has been compiled from some of the common issues from my experiences with datapack reviews.</p>
 <p><a href="https://discord.gg/SnJQcfq">Minecraft Datapacks</a></p>
