deploy: 0a0e6162da4ef4f951006a72b8e9496a9cc8db5a

--- a/print.html
+++ b/print.html
@@ -192,6 +192,10 @@ and <strong>not force</strong> it in any way.</p>
 <h2><a class="header" href="#setting" id="setting">Setting</a></h2>
 <p>If you datapacking and want the code to look like this or customize it as you like. Can be set as follows.</p>
 <p><img src="coding/./program/window.png" alt="" /></p>
+<p>0.<strong>Color Theme</strong></p>
+<ul>
+<li><code>Color Theme -&gt; Select &quot;Dark+ (default dark)&quot;</code></li>
+</ul>
 <p>1.<strong>Font</strong></p>
 <ul>
 <li>Font <a href="https://github.com/tonsky/FiraCode">Fira Code</a> (Depending on your preference, I use this font, partly because of font ligatures <code>&lt;= -&gt;</code> as in the picture and <code>@</code> is cool.)</li>
